fix: login logo z-index on desktop

--- a/src/pages/Login/style.scss
+++ b/src/pages/Login/style.scss
@@ -182,6 +182,7 @@
                 margin: 0;
                 width: 30vw;
                 height: auto;
+                z-index: 5;
             }
             
             form {
